# Harmoniq

./: .editorconfig  .gitignore  ARCHITECTURE.md  BRAND_BIBLE.md  CLAUDE.md  DESIGN_SYSTEM.md  ENGINEERING_BIBLE.md  HARMONIQ.md  README.md  ROADMAP.md  SPEC_TEMPLATE.md  WORKFLOW.md  package-lock.json
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_ratings_table.py  a2b3c4d5e6f7_add_home_rating_index.py  b3c4d5e6f7a8_add_visibility_follows.py  c3f8a1b2d4e5_add_catalog_tables.py  c4d5e6f7a8b9_add_spotify_connections.py  c5d6e7f8a9b0_add_melodies.py  d5e6f7a8b9c0_add_artist_aliases.py  d6e7f8a9b0c1_add_notifications.py  e5f6a7b8c9d0_add_users_table.py  e7f8a9b0c1d2_add_moderation.py  f6a7b8c9d0e1_add_follows_table.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/api/v1/: catalog.py  deps.py  follows.py  health.py  home.py  melodies.py  moderation.py  notifications.py  ratings.py  router.py  spotify.py  users.py  webhooks.py
backend/app/core/: crypto.py  enums.py  rate_limit.py  security.py  visibility.py
backend/app/models/: __init__.py  catalog.py  follow.py  melody.py  notification.py  rating.py  spotify.py  user.py
backend/app/schemas/: __init__.py  catalog.py  follow.py  home.py  melody.py  moderation.py  notification.py  rating.py  spotify.py  user.py
backend/app/services/: catalog.py  follow.py  home.py  melody.py  moderation.py  musicbrainz.py  notification.py  rating.py  spotify.py  storage.py  user.py
backend/scripts/: seed_catalog.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_api.py  test_catalog.py  test_follows.py  test_melodies.py  test_migrations.py  test_moderation.py  test_notifications.py  test_ratings.py  test_spotify.py  test_users.py
backend/tests/unit/: test_catalog_filtering.py  test_catalog_ingest.py  test_crypto.py  test_follow_schemas.py  test_home_service.py  test_melody_service.py  test_musicbrainz_parsing.py  test_rating_schemas.py  test_schemas.py  test_spotify_service.py  test_visibility.py
docs/: deployment.md  setup.md
docs/adr/: 0001-backend-framework.md  0002-frontend-framework.md  0003-database.md  0004-authentication.md  0005-hosting.md  0006-music-database.md  0007-backend-testing-strategy.md  0008-profile-discoverability.md  0009-melody-no-message-embed-card.md
docs/reviews/: engineering-bible-4be872d-to-docs-pass.md  engineering-bible-855d2ac-to-4be872d.md  security-review-2026-07-07.md  visibility-audit-live-2026-07-09.md
docs/specs/: frontend-data-layer-foundation.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts  (+1 more)
scripts/: devibe_scan.py  start-dev.ps1  stop-dev.ps1
specs/: phase-1-catalog.md  phase-1-melody.md  phase-1-moderation.md  phase-1-notifications.md  phase-1-ratings-reviews.md  phase-1-spotify-listening.md  phase-1-user-accounts-profiles.md
(+76 files in other folders)
