[tool.poetry]
name = "harmoniq-backend"
version = "0.1.0"
description = "Harmoniq social music discovery platform — FastAPI backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = ">=0.32,<0.50", extras = ["standard"] }
pydantic = "^2.10"
pydantic-settings = "^2.7"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = ">=0.30,<0.32"
alembic = "^1.14"
python-jose = { version = "^3.3", extras = ["cryptography"] }
httpx = "^0.28"
slowapi = "^0.1.9"
python-multipart = "^0.0.20"
boto3 = "^1.43.33"
cryptography = "^49"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = ">=6,<8"
httpx = "^0.28"
ruff = ">=0.8,<0.16"
mypy = "^1.13"
types-python-jose = "^3.3"
boto3-stubs = {extras = ["s3"], version = "^1.43.33"}
testcontainers = {version = ">=4.0,<5", extras = ["postgresql"]}
psycopg = {version = "^3.1", extras = ["binary"]}
respx = "^0.22"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "A"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
# S101 — assert is idiomatic in pytest.
# E501 — test method names must be descriptive; line-length is relaxed in tests
#         because truncating them reduces grep-ability and pytest output clarity.
"tests/*" = ["S", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running Postgres container via Docker",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
